--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ body {
   text-decoration: none;
   letter-spacing: 2px;
 
-  font-family: "Display Playfair", serif;
+  font-family: "Montserrat", serif;
   font-weight: 700;
 }
 
@@ -76,7 +76,7 @@ body {
 }
 
 .logo a {
-  font-family: "Display Playfair ", serif;
+  font-family: "Montserrat", serif;
   font-weight: 700;
   padding-left: 10px;
   color: black;
